debug card UI updated. Fastpurge update_type cache created

--- a/css/common.css
+++ b/css/common.css
@@ -141,3 +141,19 @@ tr.shown:hover {
 .delete-record {
   width: 1%;
 }
+
+/* debug request */
+.debug-card-btn {
+  margin-top: 20px;
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
