--- a/css/common.css
+++ b/css/common.css
@@ -160,6 +160,8 @@ table pre {
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ font-size: 15px;
+ font-family: Consolas;
 }
 
 
