--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5071,8 +5071,8 @@ button.btn-floating {
 
 .fixed-action-btn {
   position: fixed;
-  right: 23px;
-  bottom: 23px;
+  left: 23px;
+  top: 76px;
   padding-top: 15px;
   margin-bottom: 0;
   z-index: 998;
